--- a/index.html
+++ b/index.html
@@ -28,21 +28,12 @@
 
     <!-- 文字简介 -->
     <div class="username">Mister Kay</div>
-    <div class="desc">前端开发 移动端开发 新媒体运营</div>
+    <div class="desc">Web前端开发</div>
 
     <!-- 外部链接 -->
     <div class="social">
-        <a title="主页" href="https://github.com/fifteen718" target="_blank">
+        <a title="主页" href="https://github.com/jsonper" target="_blank">
             <span class="iconfont icon-home"></span>
-        </a>
-        <a title="博客" href="http://blog.csdn.net/fifteen718" target="_blank">
-            <span class="iconfont icon-blog"></span>
-        </a>
-        <a title="微信" href="html/weiXin.html" target="_blank">
-            <span class="iconfont icon-weiXin"></span>
-        </a>
-        <a title="摄影" href="http://fifteen718.lofter.com/" target="_blank">
-            <span class="iconfont icon-photo"></span>
         </a>
     </div>
 </div>
