--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- 外部链接 -->
     <div class="social">
         <a title="主页" href="https://github.com/jsonper" target="_blank">
-            <!-- <span class="iconfont icon-home"></span> -->
+             <span class="iconfont icon-home"></span> 
         </a>
     </div>
 </div>
