--- a/index.html
+++ b/index.html
@@ -2,35 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello Jsonper !</title>
-  <!--   <link href="favicon.ico" mce_href="favicon.ico" rel="bookmark" type="image/x-icon" /> 
-	<link href="favicon.ico" mce_href="favicon.ico" rel="icon" type="image/x-icon" /> 
-	<link href="favicon.ico" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" />  --> 
-	<link href="animated_favicon.gif" rel="icon" type="image/gif" >
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
-<!--     <script type="text/javascript" src="js/music.js"></script> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello Jsonper!</title>   
+    <link rel="stylesheet" type="text/css" href="./css/main.css"/>
 </head>
-
 <body>
-
-
 <!-- 正文 -->
-<div class="content">
+<div class="content" id="particles">
     <!-- 头像 -->
-     <a class="avatar" id="aTitle" href="#">
-        <img src="images/head02.jpg" alt="头像" >
-    </a>
-
-    <!-- 文字简介 -->
-    <div class="username">Jsonper</div>
-    <div class="desc">Web前端开发</div>
-
-    <!-- 外部链接 -->
-    <div class="social">
-        <a title="主页" href="https://github.com/jsonper" target="_blank">
-             <span class="iconfont icon-home"></span> 
+    <div class="main">
+        <a class="avatar" id="aTitle" href="#">
+            <img src="./images/head02.jpg" alt="头像" >
         </a>
+
+        <!-- 文字简介 -->
+        <div class="username">Jsonper</div>
+        <div class="desc">Web前端开发</div>
+
+        <!-- 外部链接 -->
+        <div class="social">
+            <a title="主页" href="https://github.com/jsonper" target="_blank">
+                <span class="iconfont icon-home"></span> 
+            </a>
+        </div>
     </div>
 </div>
 </body>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/jquery.particleground.min.js"></script>
+<script src="./js/jsquery.i18n.properties-1.0.9.js"></script>
+<script src="./js/index.js"></script>
 </html>
