--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <!-- 正文 -->
-<div class="content" id="particles">
+<div class="content" >
     <!-- 头像 -->
     <div class="main">
         <a class="avatar" id="aTitle" href="#">
-            <img src="./images/head02.jpg" alt="头像" >
+            <img src="./images/head02.jpg" alt="头像">
         </a>
 
         <!-- 文字简介 -->
@@ -22,10 +22,11 @@
         <!-- 外部链接 -->
         <div class="social">
             <a title="主页" href="https://github.com/jsonper" target="_blank">
-                <span class="iconfont icon-home"></span> 
+                <span class="htmleaf-icon icon-htmleaf-home-outline"></span>
             </a>
         </div>
     </div>
+    <canvas id="canvas"></canvas>
 </div>
 </body>
 <script src="./js/jquery.min.js"></script>
