--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <!-- 正文 -->
 <div class="content" >
+    <h2 class="tit">Jsonper Github Blog</h2>
     <!-- 头像 -->
     <div class="main">
         <a class="avatar" id="aTitle" href="#">
